# Assignment1

./: .gitignore  README.md  assignment_1_genAiuse.txt  pyproject.toml
.github/workflows/: ci.yml
Assignment1/: functions.py  test_func.py  tutorial.ipynb
Newton_Method/: Readme.md  examples.ipynb  function.py  requirements.txt  test.py
Newton_Method/.github/workflows/: ci.yml
examples/: bisection_example.ipynb  bisection_example.py  elasto_plastic.ipynb  newton_method_example.ipynb  newton_method_example.py
src/algorithms/: ElastoPlastic.py  bisection.py  newton_method.py
tests/: test_besection.py  test_elasto_plastic.py  test_newton_method.py
